syntax = "proto3";

package order;

// import "google/protobuf/timestamp.proto";

service OrderService {
	rpc InitiateOrder(InitiateOrderRequest) returns (OrderResponse);
	rpc CompleteOrder(CompleteOrderRequest) returns (OrderResponse);
	rpc CancelOrder(CancelOrderRequest) returns (OrderResponse);
	rpc GetOrderByIdAndUser(GetOrderByIdAndUserRequest) returns (OrderResponse);
	rpc GetOrdersByUserId(GetOrdersByUserIdRequest) returns (OrderListResponse);
}

message Order {
	string id = 1;
	int32 userId = 2;
	int32 amount = 3;
	OrderStatus status = 4;
	repeated OrderItem orderItems = 5;
	DeliveryResponse delivery = 6;
	int32 paymentId = 7;
}

message OrderItem {
	int32 id = 1;
	int32 productId = 2;
	string productName = 3;
	int32 quantity = 4;
	int32 price = 5;
}

message Delivery {
	int32 id = 1;
	string orderId = 2;
	string postCode = 3;
	string street = 4;
}

// response
message OrderResponse {
	string id = 1;
	int32 userId = 2;
	int32 amount = 3;
	OrderStatus status = 4;
	repeated OrderItemResponse orderItems = 5;
	DeliveryResponse delivery = 6;
	int32 paymentId = 7;
	string createdAt = 8;
	string updatedAt = 9;
}

message OrderListResponse {
	repeated OrderResponse orders = 1;
}

message OrderItemResponse {
	int32 id = 1;
	int32 productId = 2;
	string productName = 3;
	int32 quantity = 4;
	int32 price = 5;
}

message DeliveryResponse {
	int32 id = 1;
	string orderId = 2;
	string postCode = 3;
	string street = 4;
}


// initiate order
message InitiateOrderRequest {
	int32 userId = 1;
	repeated OrderItemRequest items = 2;
	DeliveryRequest delivery = 3;
}	

message OrderItemRequest {
	int32 productId = 1;
	int32 quantity = 2;
}

message DeliveryRequest {
	string postCode = 1;
	string street = 2;
}

// complete order
message CompleteOrderRequest {
	int32 userId = 1;
	string userEmail = 2;
	string orderId = 3;
	string providerPaymentId = 4;
}

// cancel order
message CancelOrderRequest {
	int32 userId = 1;
	string orderId = 2;
}

message GetOrderByIdAndUserRequest {
	string orderId = 1;
	int32 userId = 2;
}

message GetOrdersByUserIdRequest {
	int32 userId = 1;
}

enum OrderStatus {
	PAYMENT_PENDING = 0;
	PAYMENT_SUCCESS = 1;
	PAYMENT_FAILED = 2;
	PAYMENT_CANCELED = 3;
	SHIPPED = 4;
}

// enum DeliveryStatus {
// 	PENDING = 0;
// 	SHIPPED = 1;
// 	IN_TRANSIT = 2;
// 	DELIVERED = 3;
// 	FAILED = 4;
// 	RETURNED = 5;
// 	CANCELED = 6;
// }
